deploy/rke2/service-public.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-node-public
  namespace: cloud-node
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: cloud-node
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
    - name: quic
      port: 443
      protocol: UDP
      targetPort: quic
